force-app/main/default/objects/Dealer_Customer__c/Dealer_Customer__c.object-meta.xml
<CustomObject>
    <label>Dealer Customer</label>
    <nameField>
        <displayFormat>Dealer Customer-{0000}</displayFormat>
        <label>Dealer Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>