force-app/main/default/objects/Dealer_Customer__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Bucket &amp; Trowel</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Commercial Contractor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Interior design</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
            <value>
                <fullName>Property owner</fullName>
            </value>
            <value>
                <fullName>Residential Contractor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Retail</fullName>
                <isActive>false</isActive>
                <label>Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>