force-app/main/default/objects/Dealer_Customer__c/fields/Sales_And_Market__c.field-meta.xml
<CustomField>
    <fullName>Sales_And_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales And Market</label>
    <referenceTo>Sales_And_Market__c</referenceTo>
    <relationshipLabel>Dealer Customers</relationshipLabel>
    <relationshipName>Dealer_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>