force-app/main/default/objects/Dealer_Customer__c/fields/Selections__c.field-meta.xml
<CustomField>
    <fullName>Selections__c</fullName>
    <label>Selections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer Showroom</fullName>
            </value>
            <value>
                <fullName>Builder Showroom</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>